--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+I made a few minor changes to highlight some additional things in Ruby code such as string interpolation and regex syntax.  I also changed the color of comments to a light grey so that they don't stand out as much. - Jeff
+
 This is a mirror of http://www.vim.org/scripts/script.php?script_id=1464
 
 This color scheme contains four color schemes: two dark and two light color schemes. All highlighting groups have similar brightness. In the dark schemes bold highlighting is avoided, but used where it is reasonable. Different highlighting groups can be distinguished easily without a cluttered appearance. The highlights of all four color schemes have similar colors, but differ in contrast. 
